# DROPPS

./: LICENSE.md  README.md  dps  pyproject.toml  requirements.txt
dropps/: dps.py
dropps/analysis/: __init__.py  angle.py  assembly.py  check.py  contact.py  contact_map.py  contact_map_deprecate.py  contact_number.py  contact_number_deprecate.py  contact_statistic.py  density.py  extract.py  gyrate.py  inter_distance.py  intra_distance.py  make_ndx.py  msd.py  pdb2bond.py  sasa_mdtraj.py
dropps/backups/: mdrun_backup.py
dropps/commands/: __init__.py  addangle.py  editconf.py  genelastic.py  genmesh.py  grompp.py  gsd2xtc.py  help.py  mdrun.py  modifyres.py  pdb2cgps.py  trjconv.py
dropps/fileio/: filename_control.py  itp_reader.py  pdb_reader.py  tpr_reader.py  xpm_reader.py  xvg_reader.py
dropps/hp/: constants.py  hello_world.py
dropps/share/: all_commands.py  build_system.py  command_class.py  forcefield.py  indexing.py  parameters.py  pbc.py  trajectory.py
dropps/share/forcefields/: CALVADOS2.ff  HPS.ff  HPSRNA.ff  HPST.ff  MPiPi.ff
dropps/share/templates/: md.mdp
online/: dps_builder.ipynb
tests/: .md.xtc_offsets.npz  HPS_TYM.ff  angle.txt  asyn-angle.itp  asyn.itp  asyn.top  haha.ndx  index.ndx  index_.ndx  npt.mdp  nvt.mdp
tests/01-NPT/: npt.chk  npt.xtc
tests/02-NVT/: .nvt.xtc_offsets.npz  contact.ndx  contact.xvg  dis_a.xvg  dis_v.xvg  dist.ndx  index.ndx  nvt.chk
tests/02-NVT/test/: rg_h.xvg  rg_v.xvg
